// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dataGrid - Component should render correctly if there is no content 1`] = `
<ThemeProvider
  theme={
    Object {
      "colorBlack": "#000000",
      "colorGrayDark": "#666666",
      "colorGrayLight": "#f1f4f9",
      "colorHighlight": "#fef0d8",
      "colorPrimary": "#d51641",
      "colorSecondary": "#a3b415",
      "colorWhite": "#FFFFFF",
    }
  }
>
  <DataGrid
    columns={Array []}
    gridConfig={
      Object {
        "hideHead": false,
        "showFilters": true,
      }
    }
    rows={Array []}
  >
    <DataGridContextProvider
      columns={Array []}
      rows={Array []}
    >
      <Table
        gridConfig={
          Object {
            "hideHead": false,
            "showFilters": true,
          }
        }
      >
        <div
          className="wrapper-0-2-1"
          style={
            Object {
              "minWidth": 0,
            }
          }
        >
          <FilterBar
            columns={Array []}
          >
            <div
              className="wrapper-0-2-3"
            />
          </FilterBar>
          <TableHead
            columns={Array []}
          >
            <div
              className="row-0-2-4 row-d0-0-2-8"
            />
          </TableHead>
          <div
            className="bodyWrapper-0-2-2"
          />
        </div>
      </Table>
    </DataGridContextProvider>
  </DataGrid>
</ThemeProvider>
`;

exports[`dataGrid - Component should render with rows and cols 1`] = `
<ThemeProvider
  theme={
    Object {
      "colorBlack": "#000000",
      "colorGrayDark": "#666666",
      "colorGrayLight": "#f1f4f9",
      "colorHighlight": "#fef0d8",
      "colorPrimary": "#d51641",
      "colorSecondary": "#a3b415",
      "colorWhite": "#FFFFFF",
    }
  }
>
  <DataGrid
    columns={
      Array [
        Object {
          "align": "left",
          "dataKey": "someKey",
          "filterFn": [Function],
          "filterTags": Array [],
          "filterType": "text",
          "filterable": false,
          "flexGrow": 0,
          "hide": false,
          "label": "A LABEL",
          "sortFn": [Function],
          "sortable": true,
          "valueGetter": [Function],
          "width": 150,
        },
        Object {
          "align": "right",
          "dataKey": "someOtherKey",
          "filterFn": [Function],
          "filterTags": Array [],
          "filterType": "text",
          "filterable": true,
          "flexGrow": 1,
          "hide": false,
          "label": "A DIFFERENT LABEL",
          "sortFn": [Function],
          "sortable": true,
          "valueGetter": [Function],
          "width": 200,
        },
        Object {
          "align": "left",
          "dataKey": "thirdKey",
          "filterFn": [Function],
          "filterTags": Array [
            "tag1",
            "tag2",
          ],
          "filterType": "tag",
          "filterable": true,
          "flexGrow": 0,
          "hide": false,
          "label": "A Tags Label",
          "sortFn": [Function],
          "sortable": false,
          "valueGetter": [Function],
          "width": 150,
        },
      ]
    }
    gridConfig={
      Object {
        "hideHead": false,
        "showFilters": false,
      }
    }
    rows={
      Array [
        Object {
          "id": 1,
          "someKey": "abc",
          "someOtherKey": "value1",
          "thirdKey": Array [
            Object {
              "id": "1234",
              "type": "tag1",
            },
          ],
        },
        Object {
          "id": 2,
          "someKey": "def",
          "someOtherKey": "value2",
          "thirdKey": Array [
            Object {
              "id": "1234",
              "type": "tag1",
            },
            Object {
              "id": "5678",
              "type": "tag2",
            },
          ],
        },
      ]
    }
  >
    <DataGridContextProvider
      columns={
        Array [
          Object {
            "align": "left",
            "dataKey": "someKey",
            "filterFn": [Function],
            "filterTags": Array [],
            "filterType": "text",
            "filterable": false,
            "flexGrow": 0,
            "hide": false,
            "label": "A LABEL",
            "sortFn": [Function],
            "sortable": true,
            "valueGetter": [Function],
            "width": 150,
          },
          Object {
            "align": "right",
            "dataKey": "someOtherKey",
            "filterFn": [Function],
            "filterTags": Array [],
            "filterType": "text",
            "filterable": true,
            "flexGrow": 1,
            "hide": false,
            "label": "A DIFFERENT LABEL",
            "sortFn": [Function],
            "sortable": true,
            "valueGetter": [Function],
            "width": 200,
          },
          Object {
            "align": "left",
            "dataKey": "thirdKey",
            "filterFn": [Function],
            "filterTags": Array [
              "tag1",
              "tag2",
            ],
            "filterType": "tag",
            "filterable": true,
            "flexGrow": 0,
            "hide": false,
            "label": "A Tags Label",
            "sortFn": [Function],
            "sortable": false,
            "valueGetter": [Function],
            "width": 150,
          },
        ]
      }
      rows={
        Array [
          Object {
            "id": 1,
            "someKey": "abc",
            "someOtherKey": "value1",
            "thirdKey": Array [
              Object {
                "id": "1234",
                "type": "tag1",
              },
            ],
          },
          Object {
            "id": 2,
            "someKey": "def",
            "someOtherKey": "value2",
            "thirdKey": Array [
              Object {
                "id": "1234",
                "type": "tag1",
              },
              Object {
                "id": "5678",
                "type": "tag2",
              },
            ],
          },
        ]
      }
    >
      <Table
        gridConfig={
          Object {
            "hideHead": false,
            "showFilters": false,
          }
        }
      >
        <div
          className="wrapper-0-2-1"
          style={
            Object {
              "minWidth": 500,
            }
          }
        >
          <TableHead
            columns={
              Array [
                Object {
                  "align": "left",
                  "dataKey": "someKey",
                  "filterFn": [Function],
                  "filterTags": Array [],
                  "filterType": "text",
                  "filterable": false,
                  "flexGrow": 0,
                  "hide": false,
                  "label": "A LABEL",
                  "sortFn": [Function],
                  "sortable": true,
                  "valueGetter": [Function],
                  "width": 150,
                },
                Object {
                  "align": "right",
                  "dataKey": "someOtherKey",
                  "filterFn": [Function],
                  "filterTags": Array [],
                  "filterType": "text",
                  "filterable": true,
                  "flexGrow": 1,
                  "hide": false,
                  "label": "A DIFFERENT LABEL",
                  "sortFn": [Function],
                  "sortable": true,
                  "valueGetter": [Function],
                  "width": 200,
                },
                Object {
                  "align": "left",
                  "dataKey": "thirdKey",
                  "filterFn": [Function],
                  "filterTags": Array [
                    "tag1",
                    "tag2",
                  ],
                  "filterType": "tag",
                  "filterable": true,
                  "flexGrow": 0,
                  "hide": false,
                  "label": "A Tags Label",
                  "sortFn": [Function],
                  "sortable": false,
                  "valueGetter": [Function],
                  "width": 150,
                },
              ]
            }
          >
            <div
              className="row-0-2-4 row-d2-0-2-10"
            >
              <TableCell
                align="left"
                className="headCell-0-2-6 sortable-0-2-5 sortable-d3-0-2-11"
                grow={0}
                key="header-col-someKey"
                onClick={[Function]}
                variant="head"
                width={150}
              >
                <span
                  className="cellBase-0-2-12 head-0-2-13 leftAlign-0-2-15 headCell-0-2-6 sortable-0-2-5 sortable-d3-0-2-11"
                  onClick={[Function]}
                  style={
                    Object {
                      "flexBasis": 150,
                      "flexGrow": 0,
                      "flexShrink": 0,
                    }
                  }
                >
                  <span
                    className="headCellText-0-2-7"
                  >
                    A LABEL
                  </span>
                  <SortIndicator
                    activeSort={
                      Object {
                        "dataKey": "",
                        "direction": "NONE",
                        "sortFn": [Function],
                      }
                    }
                    column={
                      Object {
                        "align": "left",
                        "dataKey": "someKey",
                        "filterFn": [Function],
                        "filterTags": Array [],
                        "filterType": "text",
                        "filterable": false,
                        "flexGrow": 0,
                        "hide": false,
                        "label": "A LABEL",
                        "sortFn": [Function],
                        "sortable": true,
                        "valueGetter": [Function],
                        "width": 150,
                      }
                    }
                  />
                </span>
              </TableCell>
              <TableCell
                align="right"
                className="headCell-0-2-6 sortable-0-2-5 sortable-d3-0-2-11"
                grow={1}
                key="header-col-someOtherKey"
                onClick={[Function]}
                variant="head"
                width={200}
              >
                <span
                  className="cellBase-0-2-12 head-0-2-13 rightAlign-0-2-16 headCell-0-2-6 sortable-0-2-5 sortable-d3-0-2-11"
                  onClick={[Function]}
                  style={
                    Object {
                      "flexBasis": 200,
                      "flexGrow": 1,
                      "flexShrink": 0,
                    }
                  }
                >
                  <span
                    className="headCellText-0-2-7"
                  >
                    A DIFFERENT LABEL
                  </span>
                  <SortIndicator
                    activeSort={
                      Object {
                        "dataKey": "",
                        "direction": "NONE",
                        "sortFn": [Function],
                      }
                    }
                    column={
                      Object {
                        "align": "right",
                        "dataKey": "someOtherKey",
                        "filterFn": [Function],
                        "filterTags": Array [],
                        "filterType": "text",
                        "filterable": true,
                        "flexGrow": 1,
                        "hide": false,
                        "label": "A DIFFERENT LABEL",
                        "sortFn": [Function],
                        "sortable": true,
                        "valueGetter": [Function],
                        "width": 200,
                      }
                    }
                  />
                </span>
              </TableCell>
              <TableCell
                align="left"
                className="headCell-0-2-6"
                grow={0}
                key="header-col-thirdKey"
                onClick={[Function]}
                variant="head"
                width={150}
              >
                <span
                  className="cellBase-0-2-12 head-0-2-13 leftAlign-0-2-15 headCell-0-2-6"
                  onClick={[Function]}
                  style={
                    Object {
                      "flexBasis": 150,
                      "flexGrow": 0,
                      "flexShrink": 0,
                    }
                  }
                >
                  <span
                    className="headCellText-0-2-7"
                  >
                    A Tags Label
                  </span>
                  <SortIndicator
                    activeSort={
                      Object {
                        "dataKey": "",
                        "direction": "NONE",
                        "sortFn": [Function],
                      }
                    }
                    column={
                      Object {
                        "align": "left",
                        "dataKey": "thirdKey",
                        "filterFn": [Function],
                        "filterTags": Array [
                          "tag1",
                          "tag2",
                        ],
                        "filterType": "tag",
                        "filterable": true,
                        "flexGrow": 0,
                        "hide": false,
                        "label": "A Tags Label",
                        "sortFn": [Function],
                        "sortable": false,
                        "valueGetter": [Function],
                        "width": 150,
                      }
                    }
                  />
                </span>
              </TableCell>
            </div>
          </TableHead>
          <div
            className="bodyWrapper-0-2-2"
          >
            <BodyRow
              columns={
                Array [
                  Object {
                    "align": "left",
                    "dataKey": "someKey",
                    "filterFn": [Function],
                    "filterTags": Array [],
                    "filterType": "text",
                    "filterable": false,
                    "flexGrow": 0,
                    "hide": false,
                    "label": "A LABEL",
                    "sortFn": [Function],
                    "sortable": true,
                    "valueGetter": [Function],
                    "width": 150,
                  },
                  Object {
                    "align": "right",
                    "dataKey": "someOtherKey",
                    "filterFn": [Function],
                    "filterTags": Array [],
                    "filterType": "text",
                    "filterable": true,
                    "flexGrow": 1,
                    "hide": false,
                    "label": "A DIFFERENT LABEL",
                    "sortFn": [Function],
                    "sortable": true,
                    "valueGetter": [Function],
                    "width": 200,
                  },
                  Object {
                    "align": "left",
                    "dataKey": "thirdKey",
                    "filterFn": [Function],
                    "filterTags": Array [
                      "tag1",
                      "tag2",
                    ],
                    "filterType": "tag",
                    "filterable": true,
                    "flexGrow": 0,
                    "hide": false,
                    "label": "A Tags Label",
                    "sortFn": [Function],
                    "sortable": false,
                    "valueGetter": [Function],
                    "width": 150,
                  },
                ]
              }
              key="row_1"
              row={
                Object {
                  "id": 1,
                  "someKey": "abc",
                  "someOtherKey": "value1",
                  "thirdKey": Array [
                    Object {
                      "id": "1234",
                      "type": "tag1",
                    },
                  ],
                }
              }
            >
              <div
                className="row-0-2-22 row-d0-0-2-24"
              >
                <TableCell
                  align="left"
                  grow={0}
                  key="cellsomeKey_1"
                  width={150}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d3-0-2-25 leftAlign-0-2-15"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 150,
                        "flexGrow": 0,
                        "flexShrink": 0,
                      }
                    }
                  >
                    abc
                  </span>
                </TableCell>
                <TableCell
                  align="right"
                  grow={1}
                  key="cellsomeOtherKey_1"
                  width={200}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d4-0-2-26 rightAlign-0-2-16"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 200,
                        "flexGrow": 1,
                        "flexShrink": 0,
                      }
                    }
                  >
                    value1
                  </span>
                </TableCell>
                <TableCell
                  align="left"
                  grow={0}
                  key="cellthirdKey_1"
                  width={150}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d5-0-2-27 leftAlign-0-2-15"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 150,
                        "flexGrow": 0,
                        "flexShrink": 0,
                      }
                    }
                  >
                    <SkillTags
                      skills={
                        Array [
                          Object {
                            "id": "1234",
                            "type": "tag1",
                          },
                        ]
                      }
                    >
                      <div
                        className="skillWrapper-0-2-28"
                      >
                        <span
                          className="skill-0-2-29 skill-d0-0-2-30"
                          key="1234"
                        >
                          tag1
                        </span>
                      </div>
                    </SkillTags>
                  </span>
                </TableCell>
              </div>
            </BodyRow>
            <BodyRow
              columns={
                Array [
                  Object {
                    "align": "left",
                    "dataKey": "someKey",
                    "filterFn": [Function],
                    "filterTags": Array [],
                    "filterType": "text",
                    "filterable": false,
                    "flexGrow": 0,
                    "hide": false,
                    "label": "A LABEL",
                    "sortFn": [Function],
                    "sortable": true,
                    "valueGetter": [Function],
                    "width": 150,
                  },
                  Object {
                    "align": "right",
                    "dataKey": "someOtherKey",
                    "filterFn": [Function],
                    "filterTags": Array [],
                    "filterType": "text",
                    "filterable": true,
                    "flexGrow": 1,
                    "hide": false,
                    "label": "A DIFFERENT LABEL",
                    "sortFn": [Function],
                    "sortable": true,
                    "valueGetter": [Function],
                    "width": 200,
                  },
                  Object {
                    "align": "left",
                    "dataKey": "thirdKey",
                    "filterFn": [Function],
                    "filterTags": Array [
                      "tag1",
                      "tag2",
                    ],
                    "filterType": "tag",
                    "filterable": true,
                    "flexGrow": 0,
                    "hide": false,
                    "label": "A Tags Label",
                    "sortFn": [Function],
                    "sortable": false,
                    "valueGetter": [Function],
                    "width": 150,
                  },
                ]
              }
              key="row_2"
              row={
                Object {
                  "id": 2,
                  "someKey": "def",
                  "someOtherKey": "value2",
                  "thirdKey": Array [
                    Object {
                      "id": "1234",
                      "type": "tag1",
                    },
                    Object {
                      "id": "5678",
                      "type": "tag2",
                    },
                  ],
                }
              }
            >
              <div
                className="row-0-2-22 row-d1-0-2-31"
              >
                <TableCell
                  align="left"
                  grow={0}
                  key="cellsomeKey_2"
                  width={150}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d6-0-2-32 leftAlign-0-2-15"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 150,
                        "flexGrow": 0,
                        "flexShrink": 0,
                      }
                    }
                  >
                    def
                  </span>
                </TableCell>
                <TableCell
                  align="right"
                  grow={1}
                  key="cellsomeOtherKey_2"
                  width={200}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d7-0-2-33 rightAlign-0-2-16"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 200,
                        "flexGrow": 1,
                        "flexShrink": 0,
                      }
                    }
                  >
                    value2
                  </span>
                </TableCell>
                <TableCell
                  align="left"
                  grow={0}
                  key="cellthirdKey_2"
                  width={150}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d8-0-2-34 leftAlign-0-2-15"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 150,
                        "flexGrow": 0,
                        "flexShrink": 0,
                      }
                    }
                  >
                    <SkillTags
                      skills={
                        Array [
                          Object {
                            "id": "1234",
                            "type": "tag1",
                          },
                          Object {
                            "id": "5678",
                            "type": "tag2",
                          },
                        ]
                      }
                    >
                      <div
                        className="skillWrapper-0-2-28"
                      >
                        <span
                          className="skill-0-2-29 skill-d1-0-2-35"
                          key="1234"
                        >
                          tag1
                        </span>
                        <span
                          className="skill-0-2-29 skill-d1-0-2-35"
                          key="5678"
                        >
                          tag2
                        </span>
                      </div>
                    </SkillTags>
                  </span>
                </TableCell>
              </div>
            </BodyRow>
          </div>
        </div>
      </Table>
    </DataGridContextProvider>
  </DataGrid>
</ThemeProvider>
`;

exports[`dataGrid - Component should render with settings no header but filters 1`] = `
<ThemeProvider
  theme={
    Object {
      "colorBlack": "#000000",
      "colorGrayDark": "#666666",
      "colorGrayLight": "#f1f4f9",
      "colorHighlight": "#fef0d8",
      "colorPrimary": "#d51641",
      "colorSecondary": "#a3b415",
      "colorWhite": "#FFFFFF",
    }
  }
>
  <DataGrid
    columns={
      Array [
        Object {
          "align": "left",
          "dataKey": "someKey",
          "filterFn": [Function],
          "filterTags": Array [],
          "filterType": "text",
          "filterable": false,
          "flexGrow": 0,
          "hide": false,
          "label": "A LABEL",
          "sortFn": [Function],
          "sortable": true,
          "valueGetter": [Function],
          "width": 150,
        },
        Object {
          "align": "right",
          "dataKey": "someOtherKey",
          "filterFn": [Function],
          "filterTags": Array [],
          "filterType": "text",
          "filterable": true,
          "flexGrow": 1,
          "hide": false,
          "label": "A DIFFERENT LABEL",
          "sortFn": [Function],
          "sortable": true,
          "valueGetter": [Function],
          "width": 200,
        },
        Object {
          "align": "left",
          "dataKey": "thirdKey",
          "filterFn": [Function],
          "filterTags": Array [
            "tag1",
            "tag2",
          ],
          "filterType": "tag",
          "filterable": true,
          "flexGrow": 0,
          "hide": false,
          "label": "A Tags Label",
          "sortFn": [Function],
          "sortable": false,
          "valueGetter": [Function],
          "width": 150,
        },
      ]
    }
    gridConfig={
      Object {
        "hideHead": true,
        "showFilters": true,
      }
    }
    rows={
      Array [
        Object {
          "id": 1,
          "someKey": "abc",
          "someOtherKey": "value1",
          "thirdKey": Array [
            Object {
              "id": "1234",
              "type": "tag1",
            },
          ],
        },
        Object {
          "id": 2,
          "someKey": "def",
          "someOtherKey": "value2",
          "thirdKey": Array [
            Object {
              "id": "1234",
              "type": "tag1",
            },
            Object {
              "id": "5678",
              "type": "tag2",
            },
          ],
        },
      ]
    }
  >
    <DataGridContextProvider
      columns={
        Array [
          Object {
            "align": "left",
            "dataKey": "someKey",
            "filterFn": [Function],
            "filterTags": Array [],
            "filterType": "text",
            "filterable": false,
            "flexGrow": 0,
            "hide": false,
            "label": "A LABEL",
            "sortFn": [Function],
            "sortable": true,
            "valueGetter": [Function],
            "width": 150,
          },
          Object {
            "align": "right",
            "dataKey": "someOtherKey",
            "filterFn": [Function],
            "filterTags": Array [],
            "filterType": "text",
            "filterable": true,
            "flexGrow": 1,
            "hide": false,
            "label": "A DIFFERENT LABEL",
            "sortFn": [Function],
            "sortable": true,
            "valueGetter": [Function],
            "width": 200,
          },
          Object {
            "align": "left",
            "dataKey": "thirdKey",
            "filterFn": [Function],
            "filterTags": Array [
              "tag1",
              "tag2",
            ],
            "filterType": "tag",
            "filterable": true,
            "flexGrow": 0,
            "hide": false,
            "label": "A Tags Label",
            "sortFn": [Function],
            "sortable": false,
            "valueGetter": [Function],
            "width": 150,
          },
        ]
      }
      rows={
        Array [
          Object {
            "id": 1,
            "someKey": "abc",
            "someOtherKey": "value1",
            "thirdKey": Array [
              Object {
                "id": "1234",
                "type": "tag1",
              },
            ],
          },
          Object {
            "id": 2,
            "someKey": "def",
            "someOtherKey": "value2",
            "thirdKey": Array [
              Object {
                "id": "1234",
                "type": "tag1",
              },
              Object {
                "id": "5678",
                "type": "tag2",
              },
            ],
          },
        ]
      }
    >
      <Table
        gridConfig={
          Object {
            "hideHead": true,
            "showFilters": true,
          }
        }
      >
        <div
          className="wrapper-0-2-1"
          style={
            Object {
              "minWidth": 500,
            }
          }
        >
          <FilterBar
            columns={
              Array [
                Object {
                  "align": "left",
                  "dataKey": "someKey",
                  "filterFn": [Function],
                  "filterTags": Array [],
                  "filterType": "text",
                  "filterable": false,
                  "flexGrow": 0,
                  "hide": false,
                  "label": "A LABEL",
                  "sortFn": [Function],
                  "sortable": true,
                  "valueGetter": [Function],
                  "width": 150,
                },
                Object {
                  "align": "right",
                  "dataKey": "someOtherKey",
                  "filterFn": [Function],
                  "filterTags": Array [],
                  "filterType": "text",
                  "filterable": true,
                  "flexGrow": 1,
                  "hide": false,
                  "label": "A DIFFERENT LABEL",
                  "sortFn": [Function],
                  "sortable": true,
                  "valueGetter": [Function],
                  "width": 200,
                },
                Object {
                  "align": "left",
                  "dataKey": "thirdKey",
                  "filterFn": [Function],
                  "filterTags": Array [
                    "tag1",
                    "tag2",
                  ],
                  "filterType": "tag",
                  "filterable": true,
                  "flexGrow": 0,
                  "hide": false,
                  "label": "A Tags Label",
                  "sortFn": [Function],
                  "sortable": false,
                  "valueGetter": [Function],
                  "width": 150,
                },
              ]
            }
          >
            <div
              className="wrapper-0-2-3"
            >
              <div
                key="someOtherKey-filter"
              >
                <FilterText
                  column={
                    Object {
                      "align": "right",
                      "dataKey": "someOtherKey",
                      "filterFn": [Function],
                      "filterTags": Array [],
                      "filterType": "text",
                      "filterable": true,
                      "flexGrow": 1,
                      "hide": false,
                      "label": "A DIFFERENT LABEL",
                      "sortFn": [Function],
                      "sortable": true,
                      "valueGetter": [Function],
                      "width": 200,
                    }
                  }
                >
                  <div
                    className="wrapper-0-2-36"
                  >
                    <Typography
                      tag="h3"
                      variant="title"
                    >
                      <h3
                        className="title-0-2-40"
                      >
                        Filter by A DIFFERENT LABEL:
                      </h3>
                    </Typography>
                    <div
                      className="inputWrapper-0-2-37"
                    >
                      <TextField
                        onChange={[Function]}
                        placeholder="A DIFFERENT LABEL"
                        type="text"
                        value=""
                      >
                        <input
                          className="input-0-2-44 input-d0-0-2-45"
                          onChange={[Function]}
                          placeholder="A DIFFERENT LABEL"
                          type="text"
                          value=""
                        />
                      </TextField>
                      <FilterButton
                        onClick={[Function]}
                      >
                        <button
                          className="button-0-2-46"
                          onClick={[Function]}
                          type="submit"
                        >
                          <AddCircle
                            className="filterButtonIcon-0-2-47"
                          >
                            <svg
                              aria-hidden="true"
                              className="filterButtonIcon-0-2-47"
                              viewBox="0 0 24 24"
                            >
                              <path
                                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm5 11h-4v4h-2v-4H7v-2h4V7h2v4h4v2z"
                              />
                            </svg>
                          </AddCircle>
                        </button>
                      </FilterButton>
                    </div>
                  </div>
                </FilterText>
              </div>
              <div
                key="thirdKey-filter"
              >
                <FilterTag
                  column={
                    Object {
                      "align": "left",
                      "dataKey": "thirdKey",
                      "filterFn": [Function],
                      "filterTags": Array [
                        "tag1",
                        "tag2",
                      ],
                      "filterType": "tag",
                      "filterable": true,
                      "flexGrow": 0,
                      "hide": false,
                      "label": "A Tags Label",
                      "sortFn": [Function],
                      "sortable": false,
                      "valueGetter": [Function],
                      "width": 150,
                    }
                  }
                >
                  <div
                    className="wrapper-0-2-48"
                  >
                    <div
                      key="filter-col-thirdKey"
                    >
                      <Typography
                        tag="h3"
                        variant="title"
                      >
                        <h3
                          className="title-0-2-40"
                        >
                          Filter by A Tags Label:
                        </h3>
                      </Typography>
                      <a
                        className="tag-0-2-49 tag-d0-0-2-52 inactiveTag-0-2-51"
                        href="#"
                        key="filter-thirdKey-tag1"
                        onClick={[Function]}
                      >
                        tag1
                      </a>
                      <a
                        className="tag-0-2-49 tag-d0-0-2-52 inactiveTag-0-2-51"
                        href="#"
                        key="filter-thirdKey-tag2"
                        onClick={[Function]}
                      >
                        tag2
                      </a>
                    </div>
                  </div>
                </FilterTag>
              </div>
            </div>
          </FilterBar>
          <div
            className="bodyWrapper-0-2-2"
          >
            <BodyRow
              columns={
                Array [
                  Object {
                    "align": "left",
                    "dataKey": "someKey",
                    "filterFn": [Function],
                    "filterTags": Array [],
                    "filterType": "text",
                    "filterable": false,
                    "flexGrow": 0,
                    "hide": false,
                    "label": "A LABEL",
                    "sortFn": [Function],
                    "sortable": true,
                    "valueGetter": [Function],
                    "width": 150,
                  },
                  Object {
                    "align": "right",
                    "dataKey": "someOtherKey",
                    "filterFn": [Function],
                    "filterTags": Array [],
                    "filterType": "text",
                    "filterable": true,
                    "flexGrow": 1,
                    "hide": false,
                    "label": "A DIFFERENT LABEL",
                    "sortFn": [Function],
                    "sortable": true,
                    "valueGetter": [Function],
                    "width": 200,
                  },
                  Object {
                    "align": "left",
                    "dataKey": "thirdKey",
                    "filterFn": [Function],
                    "filterTags": Array [
                      "tag1",
                      "tag2",
                    ],
                    "filterType": "tag",
                    "filterable": true,
                    "flexGrow": 0,
                    "hide": false,
                    "label": "A Tags Label",
                    "sortFn": [Function],
                    "sortable": false,
                    "valueGetter": [Function],
                    "width": 150,
                  },
                ]
              }
              key="row_1"
              row={
                Object {
                  "id": 1,
                  "someKey": "abc",
                  "someOtherKey": "value1",
                  "thirdKey": Array [
                    Object {
                      "id": "1234",
                      "type": "tag1",
                    },
                  ],
                }
              }
            >
              <div
                className="row-0-2-22 row-d2-0-2-55"
              >
                <TableCell
                  align="left"
                  grow={0}
                  key="cellsomeKey_1"
                  width={150}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d9-0-2-56 leftAlign-0-2-15"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 150,
                        "flexGrow": 0,
                        "flexShrink": 0,
                      }
                    }
                  >
                    abc
                  </span>
                </TableCell>
                <TableCell
                  align="right"
                  grow={1}
                  key="cellsomeOtherKey_1"
                  width={200}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d10-0-2-57 rightAlign-0-2-16"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 200,
                        "flexGrow": 1,
                        "flexShrink": 0,
                      }
                    }
                  >
                    value1
                  </span>
                </TableCell>
                <TableCell
                  align="left"
                  grow={0}
                  key="cellthirdKey_1"
                  width={150}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d11-0-2-58 leftAlign-0-2-15"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 150,
                        "flexGrow": 0,
                        "flexShrink": 0,
                      }
                    }
                  >
                    <SkillTags
                      skills={
                        Array [
                          Object {
                            "id": "1234",
                            "type": "tag1",
                          },
                        ]
                      }
                    >
                      <div
                        className="skillWrapper-0-2-28"
                      >
                        <span
                          className="skill-0-2-29 skill-d2-0-2-59"
                          key="1234"
                        >
                          tag1
                        </span>
                      </div>
                    </SkillTags>
                  </span>
                </TableCell>
              </div>
            </BodyRow>
            <BodyRow
              columns={
                Array [
                  Object {
                    "align": "left",
                    "dataKey": "someKey",
                    "filterFn": [Function],
                    "filterTags": Array [],
                    "filterType": "text",
                    "filterable": false,
                    "flexGrow": 0,
                    "hide": false,
                    "label": "A LABEL",
                    "sortFn": [Function],
                    "sortable": true,
                    "valueGetter": [Function],
                    "width": 150,
                  },
                  Object {
                    "align": "right",
                    "dataKey": "someOtherKey",
                    "filterFn": [Function],
                    "filterTags": Array [],
                    "filterType": "text",
                    "filterable": true,
                    "flexGrow": 1,
                    "hide": false,
                    "label": "A DIFFERENT LABEL",
                    "sortFn": [Function],
                    "sortable": true,
                    "valueGetter": [Function],
                    "width": 200,
                  },
                  Object {
                    "align": "left",
                    "dataKey": "thirdKey",
                    "filterFn": [Function],
                    "filterTags": Array [
                      "tag1",
                      "tag2",
                    ],
                    "filterType": "tag",
                    "filterable": true,
                    "flexGrow": 0,
                    "hide": false,
                    "label": "A Tags Label",
                    "sortFn": [Function],
                    "sortable": false,
                    "valueGetter": [Function],
                    "width": 150,
                  },
                ]
              }
              key="row_2"
              row={
                Object {
                  "id": 2,
                  "someKey": "def",
                  "someOtherKey": "value2",
                  "thirdKey": Array [
                    Object {
                      "id": "1234",
                      "type": "tag1",
                    },
                    Object {
                      "id": "5678",
                      "type": "tag2",
                    },
                  ],
                }
              }
            >
              <div
                className="row-0-2-22 row-d3-0-2-60"
              >
                <TableCell
                  align="left"
                  grow={0}
                  key="cellsomeKey_2"
                  width={150}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d12-0-2-61 leftAlign-0-2-15"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 150,
                        "flexGrow": 0,
                        "flexShrink": 0,
                      }
                    }
                  >
                    def
                  </span>
                </TableCell>
                <TableCell
                  align="right"
                  grow={1}
                  key="cellsomeOtherKey_2"
                  width={200}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d13-0-2-62 rightAlign-0-2-16"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 200,
                        "flexGrow": 1,
                        "flexShrink": 0,
                      }
                    }
                  >
                    value2
                  </span>
                </TableCell>
                <TableCell
                  align="left"
                  grow={0}
                  key="cellthirdKey_2"
                  width={150}
                >
                  <span
                    className="cellBase-0-2-12 body-0-2-14 body-d14-0-2-63 leftAlign-0-2-15"
                    onClick={[Function]}
                    style={
                      Object {
                        "flexBasis": 150,
                        "flexGrow": 0,
                        "flexShrink": 0,
                      }
                    }
                  >
                    <SkillTags
                      skills={
                        Array [
                          Object {
                            "id": "1234",
                            "type": "tag1",
                          },
                          Object {
                            "id": "5678",
                            "type": "tag2",
                          },
                        ]
                      }
                    >
                      <div
                        className="skillWrapper-0-2-28"
                      >
                        <span
                          className="skill-0-2-29 skill-d3-0-2-64"
                          key="1234"
                        >
                          tag1
                        </span>
                        <span
                          className="skill-0-2-29 skill-d3-0-2-64"
                          key="5678"
                        >
                          tag2
                        </span>
                      </div>
                    </SkillTags>
                  </span>
                </TableCell>
              </div>
            </BodyRow>
          </div>
        </div>
      </Table>
    </DataGridContextProvider>
  </DataGrid>
</ThemeProvider>
`;
